<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17E4E4"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="92dp"
        android:layout_marginTop="125dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/edNIK"
        android:layout_width="244dp"
        android:layout_height="41dp"
        android:layout_marginBottom="164dp"
        android:ems="10"
        android:hint="@string/eeNIK"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#531F87"
        android:textColorHighlight="#673AB7"
        android:textColorHint="#531F87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <EditText
        android:id="@+id/edpassword"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginBottom="296dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#531F87"
        android:textColorHint="#531F87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btsignin"
        android:layout_width="248dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:text="@string/tLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edpassword" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="120dp"
        android:text="@string/register"
        android:textColor="#B5112A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btsignin" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="304dp"
        android:layout_height="42dp"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#980707"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>